--- a/index.html
+++ b/index.html
@@ -17,9 +17,14 @@
                 <li><a href="blog.html">Blog</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="cart.html"><i class="fa-light fa-cart-shopping"></i></a></li>
+                <li id="lg-bag"><a href="cart.html"><i class="fa-shopping-bag"></i></a></li>
+                <a href="#" id="close"><i class="fas fa-times"></i></a>
             </ul>
         </nav>
+        <div id="mobile">
+            <a href="cart.html"><i class="fa-shopping-bag"></i></a>
+            <i id="bar" class="fas fa-outdent"></i>
+        </div>
     </header>
 
     <main class="main">
@@ -339,15 +344,93 @@
                 <span>The best classic dress is on sale at cara</span>
                 <button class="white">Learn More</button>
             </div>
-            <div class="banner-box">
-                <h4>crazy deal</h4>
-                <h2>buy 1 get 1 free</h2>
+            <div class="banner-box banner-box2">
+                <h4>spring/summer</h4>
+                <h2>upcoming season</h2>
                 <span>The best classic dress is on sale at cara</span>
-                <button class="white">Learn More</button>
+                <button class="white">Collection</button>
+            </div>
+        </section>
+
+        <section id="banner3">
+            <div class="banner-box">
+                <h2>SEASONAL SALE</h2>
+                <h3>Winter Collection -50% OFF</h3>
+            </div>
+            <div class="banner-box banner-box2">
+                <h2>NEW FOOTWEAR COLLECTION</h2>
+                <h3>Spring / Summer 2022</h3>
+            </div>
+            <div class="banner-box banner-box3">
+                <h2>T-SHIRTS</h2>
+                <h3>New Trendy Prints</h3>
+            </div>
+        </section>
+
+        <section id="newsletter" class="section-p1 section-m1">
+            <div class="newstext">
+                <h4>Sign Up For Newsletters</h4>
+                <p>Get E-mail updates about our lastest shop and <span>special offers.</span></p>
+            </div>
+            <div class="form">
+                <input type="text" placeholder="Your email address">
+                <button class="normal">Sign Up</button>
             </div>
         </section>
         
     </main>
+
+    <footer class="section-p1">
+        <div class="col">
+            <img class="logo" src="IMG/logo.png" alt="">
+            <h4>Contact</h4>
+            <p><strong>Address:</strong> 562 Wellington Road, Street 32, San Francisco</p>
+            <p><strong>Phone:</strong> (+01) 2222 365 / (+91) 01 2345 6789</p>
+            <p><strong>Hours:</strong> 10:00 - 18:00, Mon - Sat</p>
+            <div class="follow">
+                <h4>Follow Us</h4>
+                <div class="icon">
+                    <i class="fab fa-facebook-f"></i>
+                    <i class="fab fa-twitter"></i>
+                    <i class="fab fa-instagram"></i>
+                    <i class="fab fa-pinterest-p"></i>
+                    <i class="fab fa-youtube"></i>
+                </div>
+            </div>
+        </div>
+
+        <div class="col">
+            <h4>My Account</h4>
+            <a href="#">Sign In</a>
+            <a href="#">View Cart</a>
+            <a href="#">My Wishlist</a>
+            <a href="#">Track My Order</a>
+            <a href="#">Help</a>
+        </div>
+
+        <div class="col">
+            <h4>About</h4>
+            <a href="#">About Us</a>
+            <a href="#">Delivery Information</a>
+            <a href="#">Privacy Policy</a>
+            <a href="#">Terms & Condition</a>
+            <a href="#">Contact Us</a>
+        </div>
+
+        <div class="col install">
+            <h4>Install App</h4>
+            <p>From App Store or Google Play</p>
+        <div class="row">
+            <img src="IMG/pay/app.jpg" alt="">
+            <img src="IMG/pay/play.jpg" alt="">
+        </div>
+        <p>Secured Payment Gtaeways</p>
+        <img src="IMG/pay/pay.png" alt="">
+        </div>
+        <div class="copyright">
+            <p>&copy; 2021, Tech2 etc - HTML CSS Ecommerce Template</p>
+        </div>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
